--- a/storyteller_lib/templates/languages/german/language_elements.jinja2
+++ b/storyteller_lib/templates/languages/german/language_elements.jinja2
@@ -1,27 +1,27 @@
 {# German template for language elements generation #}
-Erstelle einen umfassenden Leitfaden für die Generierung von Geschichtselementen auf {{ target_language }}, der Konsistenz während der gesamten Geschichte gewährleistet.
+Erstelle einen umfassenden Leitfaden für die Generierung von Geschichtselementen auf Deutsch, der Konsistenz während der gesamten Geschichte gewährleistet.
 
 Liefere folgendes:
 
 1. NAMENSKONVENTIONEN:
-   - Häufige Vornamen für männliche Figuren in {{ target_language }}-sprachigen Kulturen
-   - Häufige Vornamen für weibliche Figuren in {{ target_language }}-sprachigen Kulturen
-   - Häufige Familien-/Nachnamen in {{ target_language }}-sprachigen Kulturen
+   - Häufige Vornamen für männliche Figuren in deutschsprachigen Kulturen
+   - Häufige Vornamen für weibliche Figuren in deutschsprachigen Kulturen
+   - Häufige Familien-/Nachnamen in deutschsprachigen Kulturen
    - Namensmuster oder -traditionen (z.B. Patronyme, zusammengesetzte Namen)
    
 2. ORTSNAMEN:
-   - Arten von Ortsnamen, die in {{ target_language }}-sprachigen Regionen üblich sind
+   - Arten von Ortsnamen, die in deutschsprachigen Regionen üblich sind
    - Häufige Präfixe/Suffixe für Städte, Ortschaften, Dörfer
    - Namensmuster für geografische Merkmale (Berge, Flüsse, Wälder)
    
 3. KULTURELLE BEZÜGE:
-   - Häufige Redewendungen und Ausdrücke auf {{ target_language }}
-   - Kulturelle Traditionen und Bräuche speziell für {{ target_language }}-sprachige Regionen
-   - Historische Bezüge, die {{ target_language }}-Sprechern vertraut wären
+   - Häufige Redewendungen und Ausdrücke auf Deutsch
+   - Kulturelle Traditionen und Bräuche speziell für deutschsprachige Regionen
+   - Historische Bezüge, die Deutschsprechern vertraut wären
    
 4. ERZÄHLELEMENTE:
-   - Erzähltraditionen in der {{ target_language }}-Literatur
-   - Häufige literarische Mittel oder Techniken im {{ target_language }}-Schreiben
-   - Dialogmuster oder Sprachkonventionen auf {{ target_language }}
+   - Erzähltraditionen in der deutschen Literatur
+   - Häufige literarische Mittel oder Techniken im deutschen Schreiben
+   - Dialogmuster oder Sprachkonventionen auf Deutsch
 
 Formatiere deine Antwort als strukturiertes JSON-Objekt mit diesen Kategorien als Schlüssel.
