--- a/storyteller_lib/templates/languages/german/story_outline.jinja2
+++ b/storyteller_lib/templates/languages/german/story_outline.jinja2
@@ -26,8 +26,35 @@ Füge außerdem hinzu:
 
 Formatiere deine Antwort als strukturierten Entwurf mit klaren Abschnitten.
 
-{% if idea_guidance %}
-{{ idea_guidance }}
+{% if idea_elements %}
+GRUNDLEGENDE GESCHICHTSELEMENTE (HOHE PRIORITÄT):
+Diese Elemente bilden das Fundament der Geschichte und müssen in die Gliederung integriert werden:
+
+1. SCHAUPLATZ: {{ idea_elements.setting | default('Zu bestimmen basierend auf der Grundidee') }}
+   - Dies ist der primäre Schauplatz, an dem die Geschichte stattfindet
+   - Wichtige Ereignisse sollten innerhalb oder in Verbindung mit diesem Schauplatz stattfinden
+   - Konsistenz mit diesem etablierten Schauplatz beibehalten
+
+2. HAUPTCHARAKTERE: {{ idea_elements.characters | join(', ') if idea_elements.characters else 'Zu bestimmen basierend auf der Grundidee' }}
+   - Diese Charaktere sollten zentral für die Geschichte sein
+   - Ihre Eigenschaften und Rollen sollten mit der Grundidee übereinstimmen
+   - Das Wesen dieser Charaktere bewahren
+
+3. ZENTRALE HANDLUNG: {{ idea_elements.plot | default('Zu bestimmen basierend auf der Grundidee') }}
+   - Dies ist die Haupthandlung, die die Erzählung vorantreibt
+   - Andere Handlungselemente sollten diesen zentralen Konflikt unterstützen
+   - Die Kernnatur dieses Konflikts beibehalten
+
+4. THEMEN: {{ idea_elements.themes | join(', ') if idea_elements.themes else 'Zu bestimmen basierend auf der Grundidee' }}
+   - Diese Themen sollten sich durch die ganze Geschichte ziehen
+
+5. GENRE-ELEMENTE: {{ idea_elements.genre_elements | join(', ') if idea_elements.genre_elements else 'Zu bestimmen basierend auf der Grundidee' }}
+   - Diese Elemente sollten eingebaut werden, um Genre-Konsistenz zu wahren
+
+Die Heldenreise-Struktur sollte verwendet werden, um eine erweiterte Version dieser Grundidee zu erstellen.
+Bei Konflikten zwischen Heldenreise-Struktur und Grundidee, erweitere die Grundidee nach Bedarf.
+
+ABSCHLUSSPRÜFUNG: Stelle vor der Finalisierung sicher, dass die Schlüsselelemente aus der Grundidee und die Heldenreise präsent und gut integriert sind.
 {% endif %}
 
 {% if creative_guidance %}
