--- a/storyteller_lib/templates/base/scene_writing.jinja2
+++ b/storyteller_lib/templates/base/scene_writing.jinja2
@@ -56,6 +56,10 @@ Scene {{ current_scene }}: {{ scene_description }}
 {{ structural_guidance }}
 {% endif %}
 
+{% if specification_guidance %}
+{{ specification_guidance }}
+{% endif %}
+
 GENTLE WRITING REMINDERS:
 1. Let the scene breathe - not every moment needs to be dramatic
 2. Build naturally on what came before without repeating exact events
