--- a/storyteller_lib/templates/base/story_outline.jinja2
+++ b/storyteller_lib/templates/base/story_outline.jinja2
@@ -22,7 +22,7 @@ Include all major phases of the hero's journey, adapted to fit the initial idea:
 
 For each phase, provide a brief description of what happens.
 Also include:
-- A captivating title for the story that reflects the initial idea
+- Title: [A captivating title for the story that reflects the initial idea]
 - 3-5 main characters with brief descriptions (include those specified in the initial idea)
 - A central conflict or challenge (aligned with the plot from the initial idea)
 - The world/setting of the story (consistent with the setting from the initial idea)
