--- a/storyteller_lib/templates/languages/german/story_outline.jinja2
+++ b/storyteller_lib/templates/languages/german/story_outline.jinja2
@@ -18,7 +18,7 @@ Berücksichtige alle wichtigen Phasen der Heldenreise, angepasst an die Grundide
 
 Beschreibe für jede Phase kurz, was geschieht.
 Füge außerdem hinzu:
-- Einen fesselnden Titel für die Geschichte, der die Grundidee widerspiegelt
+- Titel: [Einen fesselnden Titel für die Geschichte, der die Grundidee widerspiegelt]
 - 3-5 Hauptcharaktere mit kurzen Beschreibungen (einschließlich der in der Grundidee genannten)
 - Einen zentralen Konflikt oder eine Herausforderung (im Einklang mit der Handlung der Grundidee)
 - Die Welt/Schauplatz der Geschichte (konsistent mit dem Setting der Grundidee)
