--- a/storyteller_lib/templates/base/chapter_planning.jinja2
+++ b/storyteller_lib/templates/base/chapter_planning.jinja2
@@ -21,9 +21,9 @@ For each chapter, provide:
 4. For each of the 3-6 key scenes, specify:
    - Brief description of what happens
    - Plot progressions: What key plot points are revealed/advanced (e.g., "hero_learns_about_quest", "villain_revealed")
-   - Character knowledge changes: What each character learns in this scene
+   - Character learns: List what characters learn, formatted as "CharacterName: what they learn"
    - Required characters: Which characters MUST appear
-   - Prerequisites: What must have already happened before this scene
+   - Forbidden repetitions: What plot points must NOT be repeated from earlier scenes
 5. Any major revelations or plot twists
 
 CRITICAL: Be very specific about plot progressions. Instead of generic descriptions like "character development", use specific keys like:
